# feedback-forensics

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: publish-to-pypi.yml  pytest.yml  rebuild-hfspace.yml  update-model-comparison.yml
data/configs/001_arena_multiturn/: config.yaml
data/configs/002_arena2025_140k/: config.yaml
data/output/: annotated_pairs.json
data/output/example/results/: 000_train_data.csv  030_distilled_principles_per_cluster.json  040_votes_per_comparison.csv  040_votes_per_comparison.index.json  041_votes_per_cluster.json  050_filtered_principles.json  060_constitution.json
docs/: README.md  _config.yml  _toc.yml  api.ipynb  api.md  contributing.md  index.md  installation.md  pypi_readme.md
docs/advanced/: annotation.ipynb  correlation.ipynb  datasets.ipynb  error_bars.ipynb  index.md  intervals.ipynb
docs/api/: cli.ipynb  index.md  python.ipynb
docs/guide/: datasets.ipynb  feedback.ipynb  index.md  models.ipynb
docs/method/: core.md  index.md  limitations.md  metrics.md  overview.md
notebooks/: 01_llama4maverick_experimental_dataprep.ipynb  02_plotting_paper.ipynb  03_model_comparison.ipynb  04_generate_qrs.ipynb  04_sanitize_datasets_for_release.ipynb  05_multiturn_dataprep.ipynb  06_lmarena2025-140k_dataprep.ipynb  07_generations_analysis.ipynb
src/feedback_forensics/: __init__.py
src/feedback_forensics/app/: builtin_datasets.py  callbacks.py  constants.py  data_loader.py  dataset_utils.py  dataset_utils_test.py  datasets.py  info_texts.py  interface.py  loader.py  loader_test.py  main.py  main_test.py  metrics.py  metrics_test.py  model_annotators.py  model_annotators_test.py  styling.py  url_parser.py  url_parser_test.py  utils.py  utils_test.py
src/feedback_forensics/app/callbacks/: __init__.py  attach.py  default_settings.py  example_viewer.py  loading.py  main.py  update_options.py  utils.py
src/feedback_forensics/app/data/: dataset_utils.py  dataset_utils_test.py  datasets.py  handler.py  handler_test.py  loader.py  loader_test.py
src/feedback_forensics/app/plotting/: __init__.py  constants.py  main.py  metrics_table.py  paper.py  single.py  table.py
src/feedback_forensics/app/plotting_v2/: __init__.py  constants.py  main.py  table.py
src/feedback_forensics/data/: conftest.py  dataset_utils.py  dataset_utils_test.py  datasets.py  fetcher.py  handler.py  handler_test.py  loader.py  loader_test.py
src/feedback_forensics/data/operations/: __init__.py  core.py  core_test.py  merge.py  merge_test.py
src/feedback_forensics/tools/: __init__.py  ff_annotate.py  ff_data.py  ff_human_annotation.py  ff_model_comparison.py  ff_modelgen.py  hf_spaces.py  icai_cli.py  model_comparison.py
src/forensics/app/: callbacks.py  constants.py  data_loader.py  datasets.py  interface.py  main.py  url_parser.py  utils.py
src/forensics/app/plotting/: __init__.py  metrics_table.py  multiple.py
src/forensics/app/plotting_v2/: __init__.py  main.py  table.py
