[project]
name = "feedback-forensics"
version = "0.4.6"
authors = [
  { name="rdnfn", email="hi@arduin.io" },
  { name="timokau", email="timo.kaufmann@ifi.lmu.de"},
]
description = "A tool to investigate your pairwise feedback data"
readme = "docs/pypi_readme.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  "inverse-cai",
  "langchain",
  "python-dotenv",
  "langchain-openai",
  "langchain-anthropic",
  "langchain-community",
  "scikit-learn",
  "anthropic",
  "loguru",
  "hydra-core",
  "pandas",
  "datasets", # To fetch huggingface datasets
  "wandb",
  "alpaca-eval",
  "nbconvert",
  "jupyter",
  "ipywidgets", # IProgress in jupyter notebooks
  "gradio",
  "msgspec",
  "ijson",
  "adjustText",
]

[project.optional-dependencies]
dev = [
    "pytest >=6.0",
    "black ==24.10.0",
    "bump-my-version",
    "huggingface_hub",
]
docs = [
    "jupyter-book>=0.15.1",
    "sphinx>=4.0.0",
    "myst-parser>=0.18.0",
    "sphinx-book-theme>=1.0.0",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinxcontrib-bibtex",
    "sphinx-autodoc2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/feedback_forensics"]

[tool.bumpversion]
current_version = "0.4.6"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[project.scripts]
feedback-forensics = "feedback_forensics.app.main:run"
ff-annotate = "feedback_forensics.tools.ff_annotate:run"
ff-hfspace-rebuild = "feedback_forensics.tools.ff_hfspace_rebuild:main"
ff-data = "feedback_forensics.tools.ff_data:run"
ff-model-comparison = "feedback_forensics.tools.ff_model_comparison:run"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["src"]
python_files = ["*_test.py"]

[tool.black]
line-length = 88
target-version = ['py311']
